force-app/main/default/objects/Interaction__c/Interaction__c.object-meta.xml
<CustomObject>
    <description>Descrizione funzionale dell&apos;oggetto</description>
    <label>Interazione</label>
    <nameField>
        <displayFormat>INT-{00000000}</displayFormat>
        <label>Interazione Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interazioni</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>