force-app/main/default/objects/Interaction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo di ricerca per l’Account da collegare all’interazione o creazione nuovo Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Interazioni</relationshipLabel>
    <relationshipName>Interazioni</relationshipName>
    <type>Lookup</type>
</CustomField>