force-app/main/default/objects/Interaction__c/fields/BodyEmail__c.field-meta.xml
<CustomField>
    <fullName>BodyEmail__c</fullName>
    <label>Corpo Email</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>