force-app/main/default/objects/Interaction__c/fields/CompanyOwner__c.field-meta.xml
<CustomField>
    <fullName>CompanyOwner__c</fullName>
    <label>Company Owner</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_CompanyOwner</valueSetName>
    </valueSet>
</CustomField>