force-app/main/default/objects/Interaction__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo di ricerca per il Contact da collegare all’interazione o creazione nuovo Contact</description>
    <label>Referente</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Interazioni</relationshipLabel>
    <relationshipName>Interazioni</relationshipName>
    <type>Lookup</type>
</CustomField>