force-app/main/default/objects/Interaction__c/fields/CreatorGroup__c.field-meta.xml
<CustomField>
    <fullName>CreatorGroup__c</fullName>
    <label>Gruppo Creatore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>