force-app/main/default/objects/Interaction__c/fields/ProtocolDate__c.field-meta.xml
<CustomField>
    <fullName>ProtocolDate__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Data protocollazione</label>
    <type>DateTime</type>
</CustomField>