force-app/main/default/objects/Interaction__c/fields/ReceptionDate__c.field-meta.xml
<CustomField>
    <fullName>ReceptionDate__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Data di ricezione</label>
    <type>DateTime</type>
</CustomField>