force-app/main/default/objects/Interaction__c/fields/SenderEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>SenderEmailAddress__c</fullName>
    <label>Indirizzo Email Mittente</label>
    <type>Email</type>
</CustomField>