force-app/main/default/objects/Interaction__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Stato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aperta</fullName>
                <default>true</default>
                <label>Aperta</label>
            </value>
            <value>
                <fullName>Chiusa</fullName>
            </value>
            <value>
                <fullName>Scartata</fullName>
            </value>
            <value>
                <fullName>Bozza</fullName>
                <isActive>false</isActive>
                <label>Bozza</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>