force-app/main/default/objects/Interaction__c/fields/SubjectEmail__c.field-meta.xml
<CustomField>
    <fullName>SubjectEmail__c</fullName>
    <label>Oggetto Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>