force-app/main/default/objects/Interaction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Tipologia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Cartacea</fullName>
                <default>true</default>
                <label>Cartacea</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>