force-app/main/default/objects/Interaction__c/recordTypes/HDT_RT_Register.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_Register</fullName>
    <active>true</active>
    <description>Interazioni del cliente</description>
    <label>Interazione</label>
</RecordType>