force-app/main/default/objects/Interaction__c/listViews/Interazioni_Digital.listView-meta.xml
<ListView>
    <fullName>Interazioni_Digital</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Reason__c</columns>
    <columns>Status__c</columns>
    <columns>ProtocolDate__c</columns>
    <columns>SubjectEmail__c</columns>
    <columns>BodyEmail__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Digital</value>
    </filters>
    <label>Interazioni Digital</label>
</ListView>