force-app/main/default/objects/Interaction__c/listViews/Interazioni_Personali.listView-meta.xml
<ListView>
    <fullName>Interazioni_Personali</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Interazioni Personali</label>
</ListView>